# allRGB

./: .gitignore  AlgorithmAreaAverageHsv.cpp  AlgorithmAreaAverageHsv.h  AlgorithmAreaAverageRgb.cpp  AlgorithmAreaAverageRgb.h  AlgorithmBase.cpp  AlgorithmBase.h  AlgorithmExhaustiveRgb.cpp  AlgorithmExhaustiveRgb.h  AlgorithmSinglePixelSwapHsv.cpp  AlgorithmSinglePixelSwapHsv.h  AlgorithmSinglePixelSwapRgb.cpp  AlgorithmSinglePixelSwapRgb.h  AllRgbWidget.cpp  AllRgbWidget.h  CMakeLists.txt  LICENSE  LoadImageWidget.cpp  LoadImageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PanAndZoomWidget.cpp  PanAndZoomWidget.h  README.md  Resources.qrc  TargetImageWidget.cpp  TargetImageWidget.h  ViewAllRgbWidget.cpp  ViewAllRgbWidget.h
EveryRGBPictureMatcher/: run.bat
EveryRGBPictureMatcher/src/: EveryRGBExact.java  EveryRGBHillclimber.java  EveryRGBHillclimberNegative.java  Main.java  Menu.java  PictureApproximator.java
